update google API key

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </style>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZBrTMAtzQbkao6Gg73lyLFuL8uFE2qeU&sensor=false">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNQe2S9k3nO-LWMoH67sGuAcN-XG2_QHw">
 </script>
 
 <script type="text/javascript">
